<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="8dp"
        android:paddingVertical="16dp"
        android:background="@color/PeachPuff"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_label" />

        <EditText
            android:id="@+id/name_input"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints="name"
            android:hint="@string/name_input_hint"
            android:inputType="text"
            android:textColorHint="#546E7A" />

        <TextView
            android:id="@+id/surname_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/surname_label" />

        <EditText
            android:id="@+id/surname_input"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints="name"
            android:hint="@string/surname_input_hint"
            android:inputType="text"
            android:textColorHint="#546E7A" />

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/OrangeRed"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp">

            <Button
                android:id="@+id/b1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/b1_label"
                tools:ignore="ButtonStyle" />

            <Space
                android:layout_width="16dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/b2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/b2_label"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <TextView
            android:id="@+id/result_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/results_label" />

        <EditText
            android:id="@+id/result_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:background="@color/DarkGoldenrod"
            android:inputType="textMultiLine" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>