<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InformationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/PeachPuff"
        android:orientation="vertical"
        android:paddingHorizontal="8dp"
        android:paddingVertical="24dp">

        <TextView
                android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textAlignment="center"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <EditText
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/info_label"
            android:inputType="text" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="48dp" />

        <Button
            android:id="@+id/button"
            android:paddingHorizontal="48dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>